--- a/asset_project/pubspec.yaml
+++ b/asset_project/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   provider: ^6.0.1
   intl: ^0.17.0
   http: ^0.13.4
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -60,9 +61,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+    - assets/images/syaza.png
+    - assets/images/bad.png
+    - assets/images/fatin.png
+    - assets/images/shira.png
+    - assets/images/adha.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -76,6 +82,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  # - family: RobotoCondensed
+  #   fonts:
+  #     - asset: assets/fonts/RobotoCondensed-Regular.ttf
+  #     - asset: assets/fonts/RobotoCondensed-Bold.ttf
+  #       weight: 700
+  #     - asset: assets/fonts/RobotoCondensed-Light.ttf
+  #       weight: 300
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
